--- a/B9IS124_20048955/src/app/home/home.page.html
+++ b/B9IS124_20048955/src/app/home/home.page.html
@@ -34,5 +34,26 @@
         </ion-button>
       </ion-card-content>
     </ion-card>
+
+    <ion-list lines="none" class="info-list">
+      <ion-list-header>
+        <ion-label>Quick Info</ion-label>
+      </ion-list-header>
+      <ion-item>
+        <ion-icon slot="start" name="time-outline"></ion-icon>
+        <ion-label>
+          <h2>Opening Hours</h2>
+          <p>Mon-Sat: 11 AM - 10 PM</p>
+          <p>Sunday: 12 PM - 9 PM</p>
+        </ion-label>
+      </ion-item>
+      <ion-item>
+        <ion-icon slot="start" name="location-outline"></ion-icon>
+        <ion-label>
+          <h2>Address</h2>
+          <p>123 Main Street, Dublin 02, Dublin, Ireland</p>
+        </ion-label>
+      </ion-item>
+    </ion-list>
  </div>
 </ion-content>
