--- a/B9IS124_20048955/src/app/home/home.page.scss
+++ b/B9IS124_20048955/src/app/home/home.page.scss
@@ -1,11 +1,11 @@
 #container {
   text-align: center;
-
   position: absolute;
   left: 0;
   right: 0;
   top: 50%;
   transform: translateY(-50%);
+  padding: 16px;
 }
 
 #container strong {
@@ -16,9 +16,7 @@
 #container p {
   font-size: 16px;
   line-height: 22px;
-
   color: #8c8c8c;
-
   margin: 0;
 }
 
