adjsut container for smaller screens

--- a/B9IS124_20048955/src/app/home/home.page.scss
+++ b/B9IS124_20048955/src/app/home/home.page.scss
@@ -109,3 +109,13 @@
     }
   }
 }
+
+@media (max-height: 700px) {
+  #container {
+    position: relative;
+    top: auto;
+    transform: none;
+    padding-top: 20px;
+    padding-bottom: 20px;
+  }
+}
