active button for addtoCart action in menu html page  and adding click-count scss in menu scss page

--- a/B9IS124_20048955/src/app/menu/menu.page.html
+++ b/B9IS124_20048955/src/app/menu/menu.page.html
@@ -29,7 +29,7 @@
         <ion-button fill="clear" (click)="shareItem(item)">
           <ion-icon name="share-social-outline"></ion-icon>
         </ion-button>
-        <ion-button (click)="0">
+        <ion-button (click)="addToCart(item)">
           <ion-icon name="add-circle-outline"></ion-icon>
         </ion-button>
 
