--- a/B9IS124_20048955/src/app/menu/menu.page.scss
+++ b/B9IS124_20048955/src/app/menu/menu.page.scss
@@ -131,3 +131,14 @@ ion-item-divider.first-divider {
 }
 
 
+.click-count {
+  font-weight: bold;
+  color: var(--ion-color-primary);
+  margin-left: 8px;
+  font-size: 0.9em;
+  user-select: none;
+}
+
+ion-icon {
+  font-size: 22px;
+}
