--- a/B9IS124_20048955/src/app/menu/menu.page.html
+++ b/B9IS124_20048955/src/app/menu/menu.page.html
@@ -43,7 +43,16 @@
 
 
 
-
-
 </ion-content>
   
+
+
+<ion-footer>
+  <ion-toolbar>
+    <ion-buttons slot="end">
+      <ion-button (click)="goToCart()">
+        <ion-icon name="cart-outline" slot="icon-only"></ion-icon>
+      </ion-button>
+    </ion-buttons>
+  </ion-toolbar>
+</ion-footer>
