--- a/B9IS124_20048955/src/app/contact/contact.page.html
+++ b/B9IS124_20048955/src/app/contact/contact.page.html
@@ -1,13 +1,55 @@
 <ion-header [translucent]="true">
   <ion-toolbar>
-    <ion-title>contact</ion-title>
+    <ion-buttons slot="start">
+      <ion-back-button defaultHref="/home"></ion-back-button>
+    </ion-buttons>
+    <ion-title>Contact Us</ion-title>
   </ion-toolbar>
 </ion-header>
 
 <ion-content [fullscreen]="true">
-  <ion-header collapse="condense">
-    <ion-toolbar>
-      <ion-title size="large">contact</ion-title>
-    </ion-toolbar>
-  </ion-header>
+  <ion-card class="contact-card">
+
+     <ion-card-header>
+      <ion-card-title>Get in Touch</ion-card-title>
+      <ion-card-subtitle>We'd love to hear from you!</ion-card-subtitle>
+    </ion-card-header>
+
+    <ion-card-content>
+
+    <ion-list lines="none">
+        <ion-item>
+          <ion-icon slot="start" name="call-outline"></ion-icon>
+          <ion-label>
+            <h2>Phone</h2>
+            <p><a href="tel:+353870340339">+353 870 340 339</a></p>
+          </ion-label>
+        </ion-item>
+        <ion-item>
+          <ion-icon slot="start" name="mail-outline"></ion-icon>
+          <ion-label>
+            <h2>Email</h2>
+            <p><a href="mailto:waiyanphyo830@gmail.com">info@myrestaurant.com</a></p>
+          </ion-label>
+        </ion-item>
+        <ion-item>
+          <ion-icon slot="start" name="location-outline"></ion-icon>
+          <ion-label>
+            <h2>Address</h2>
+            <p>123 Main Street, Dublin 02, Dublin, Ireland</p>
+          </ion-label>
+        </ion-item>
+        <ion-item>
+          <ion-icon slot="start" name="time-outline"></ion-icon>
+          <ion-label>
+            <h2>Hours</h2>
+            <p>Mon-Sat: 11 AM - 10 PM</p>
+            <p>Sunday: 12 PM - 9 PM</p>
+          </ion-label>
+        </ion-item>
+    </ion-list>
+ 
+    </ion-card-content>
+    
+  </ion-card>
 </ion-content>
