adding about us button in home page and fixing to be better

--- a/B9IS124_20048955/src/app/home/home.page.html
+++ b/B9IS124_20048955/src/app/home/home.page.html
@@ -32,6 +32,9 @@
           <ion-icon slot="start" name="globe-outline"></ion-icon>
           Visit Our Website
         </ion-button>
+
+        
+
       </ion-card-content>
     </ion-card>
 
@@ -55,5 +58,11 @@
         </ion-label>
       </ion-item>
     </ion-list>
+     <ion-button expand="block" fill="solid" color="success" routerLink="/about">
+        <ion-icon slot="start" name="information-circle-outline"></ion-icon>
+         About Us
+      </ion-button>
  </div>
+
+
 </ion-content>
