--- a/B9IS124_20048955/src/app/menu/menu.page.html
+++ b/B9IS124_20048955/src/app/menu/menu.page.html
@@ -1,5 +1,8 @@
 <ion-header [translucent]="true">
   <ion-toolbar>
+    <ion-buttons slot="start">
+      <ion-back-button defaultHref="/home"></ion-back-button>
+    </ion-buttons>
     <ion-title>Menu</ion-title>
   </ion-toolbar>
 </ion-header>
