modify to be better

--- a/B9IS124_20048955/src/app/home/home.page.html
+++ b/B9IS124_20048955/src/app/home/home.page.html
@@ -10,7 +10,7 @@
  <div id="container">
 
   <ion-card class="welcome-card">
-      <img src="https://placehold.co/600x400/FF5733/FFFFFF?text=Welcome+to+Our+Restaurant" alt="Restaurant interior" />
+      <img src="https://www.monti.my/wp-content/uploads/2024/07/monti-food.jpg" alt="Restaurant interior" />
       <ion-card-header>
         <ion-card-subtitle>Welcome</ion-card-subtitle>
         <ion-card-title>Taste the Difference</ion-card-title>
