--- a/B9IS124_20048955/src/app/menu/menu.page.scss
+++ b/B9IS124_20048955/src/app/menu/menu.page.scss
@@ -142,3 +142,29 @@ ion-item-divider.first-divider {
 ion-icon {
   font-size: 22px;
 }
+
+
+.cart-footer {
+  display: flex;
+  justify-content: center;
+  padding: 10px;
+}
+
+.cart-button {
+  --border-radius: 10px;
+  --padding-start: 20px;
+  --padding-end: 20px;
+  font-size: 1.2em;
+  font-weight: 600;
+  text-transform: uppercase;
+
+  ion-icon {
+    font-size: 1.8em;
+    margin-right: 10px;
+  }
+}
+
+
+
+
+
