--- a/B9IS124_20048955/src/app/menu/menu.page.html
+++ b/B9IS124_20048955/src/app/menu/menu.page.html
@@ -51,11 +51,12 @@
 
 
 <ion-footer>
-  <ion-toolbar>
-    <ion-buttons slot="end">
-      <ion-button (click)="goToCart()">
-        <ion-icon name="cart-outline" slot="icon-only"></ion-icon>
+  <ion-toolbar color="light">
+    <div class="cart-footer">
+      <ion-button routerLink="/cart" color="success" fill="solid" class="cart-button">
+        <ion-icon name="cart-outline" slot="start"></ion-icon>
+        Add
       </ion-button>
-    </ion-buttons>
+    </div>
   </ion-toolbar>
 </ion-footer>
